<resources>
    <string name="app_name">Introduce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="action_settings">Settings</string>

    <string name="colorscheme">Colors</string>

    <string name="textsize">Text</string>

    <string name="nature">Nature</string>

    <string name="night">Night</string>

    <string name="fluro">Fluro</string>

    <string name="construction">Construction</string>

    <string name="standard">Default</string>

    <string name="txt_sml">Small Text</string>

    <string name="txt_med">Med Text</string>

    <string name="txt_lrg">Large Text</string>

    <string name="heading">Ohms 5%</string>

    <string name="image_desc">compass dial</string>

    <string name="start_text"> </string>

    <string name="image_description">Resistor Images</string>
    <string name="resLeft">Left</string>
    <string name="bandOne">BandOne</string>
    <string name="bandTwo">BandTwo</string>
    <string name="bandThree">BandThree</string>
    <string name="spacer">Spacer</string>
    <string name="tolerance">Tolerance</string>
    <string name="resRight">Right</string>
    <string name="res_value">Resistor Value</string>
</resources>