<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color_menu"
        app:showAsAction="always"
        android:title="@string/colorscheme">
        <menu>
            <item
                android:id="@+id/night"
                android:title="@string/night"/>
            <item
                android:id="@+id/nature"
                android:title="@string/nature"/>
            <item
                android:id="@+id/fluro"
                android:title="@string/fluro"/>
            <item
                android:id="@+id/construction"
                android:title="@string/construction"/>
            <item
                android:id="@+id/standard"
                android:title="@string/standard"/>
        </menu>
    </item>
    <item
        android:id="@+id/text_menu"
        app:showAsAction="always"
        android:title="@string/textsize">
        <menu>
            <item
                android:id="@+id/text_sml"
                android:title="@string/txt_sml"/>
            <item
                android:id="@+id/text_med"
                android:title="@string/txt_med"/>
            <item
                android:id="@+id/text_lrg"
                android:title="@string/txt_lrg"/>
        </menu>
    </item>


</menu>