<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hunhvnvui.myapplication.MainActivity">

    <TextView
        android:id="@+id/resValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/res_value" />

    <TextView
        android:id="@+id/View"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/layoutImages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/resLeft"
            android:src="@drawable/resleft" />

        <ImageView
            android:id="@+id/colorOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bandOne"
            android:src="@drawable/black" />

        <ImageView
            android:id="@+id/colorTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bandTwo"
            android:src="@drawable/orange" />

        <ImageView
            android:id="@+id/colorThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bandThree"
            android:src="@drawable/orange" />

        <ImageView
            android:id="@+id/spacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/spacer"
            android:src="@drawable/spacer" />

        <ImageView
            android:id="@+id/Tolerance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tolerance"
            android:src="@drawable/gold" />

        <ImageView
            android:id="@+id/Right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/resRight"
            android:src="@drawable/resright" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSpinners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutImages"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/bandOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/bandTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/bandThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/bandTolerance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>